--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 
 
 mosip.kernel.sms.api=http://api.msg91.com/api/v2/sendsms
-mosip.kernel.sms.authkey=268449AOjrOOqpuNTz5c91c6af
+mosip.kernel.sms.authkey=###############
 mosip.kernel.sms.country.code=91
-mosip.kernel.sms.sender=SHELMT
+mosip.kernel.sms.sender=#####
 mosip.kernel.sms.route=4
 mosip.kernel.sms.number.length=10
 
